improve readability of disabled inputs improve layout of login page fix minor css issues

--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -6,5 +6,6 @@ $code-border: 1px solid rgba(0, 0, 0, 0.1);
 
 $hero-text-color: #333;
 
-$label-color:  #757575;
+$label-color: #222;
 
+$label-disabled-color: #999;
