--- a/client/src/assets/scss/style.scss
+++ b/client/src/assets/scss/style.scss
@@ -90,4 +90,7 @@ form {
   label {
     color: $label-color;
   }
+  input:disabled+label {
+    color: $label-disabled-color;
+  }
 }
