--- a/client/src/assets/scss/themes/default.scss
+++ b/client/src/assets/scss/themes/default.scss
@@ -61,8 +61,9 @@ $table-bg-scale:              0 * 1% !default; // *1% because deprecation waring
 // Forms
 
 $input-bg:                          $gray-200 !default;
-$input-disabled-bg:                 $gray-800 !default;
-$input-color:                       $gray-800 !default;
+$input-disabled-bg:                 $gray-100 !default;
+$input-disabled-color:              $gray-500 !default;
+$input-color:                       $gray-900 !default;
 $input-border-color:                $body-bg !default;
 $input-group-addon-color:           $gray-500 !default;
 $input-group-addon-bg:              $gray-700 !default;
