--- a/client/src/assets/scss/themes/fumix.scss
+++ b/client/src/assets/scss/themes/fumix.scss
@@ -60,10 +60,12 @@ $table-bg-scale:              0 * 1% !default; // *1% because deprecation waring
 
 // Forms
 
-$input-bg:                          $gray-200 !default;
-$input-disabled-bg:                 $gray-800 !default;
-$input-color:                       $gray-800 !default;
-$input-border-color:                $body-bg !default;
+$input-bg:                          $gray-300 !default;
+$input-disabled-bg:                 $gray-100 !default;
+$input-disabled-color:              $gray-500 !default;
+$input-disabled-border-color:       lighten($body-bg, 75%) !default;
+$input-color:                       $gray-900 !default;
+$input-border-color:                lighten($body-bg, 25%) !default;
 $input-group-addon-color:           $gray-500 !default;
 $input-group-addon-bg:              $gray-700 !default;
 
